# eagle

./: .travis.yml  CMakeLists.txt  DNAiProfile1  GetEBOV.sh  GetHuman.sh  Makefile  Makefile.linux  README.md  RunAll.h3x  RunAll.sh  RunEntropy.sh  RunOutbreak.sh  RunPlot.sh  common.c  common.h  context.c  context.h  defs.h  eagle.c  mink.c  paint.c  paint.h  projector.c  rebat.c
imgs/: logo.eps
scripts/: EBOV.fa  GetEBOV.sh  GetHuman.sh  GetHumanCorona.sh  GetPangolinGenome.sh  GetSARS2.sh  InstallDependencies.sh  RunPlot.sh  install_requirements.sh
scripts/ebola/: RunOutbreak.sh  RunPlot.sh  RunStats.sh
scripts/zika/: run.sh
src/: CMakeLists.txt  Makefile.linux  common.c  common.h  context.c  context.h  defs.h  dist.c  dist.h  eagle.c  mink.c  msg.c  msg.h  rebat.c
zika/: run.sh
